switched to onchange for username input as well

--- a/account-create.html
+++ b/account-create.html
@@ -71,7 +71,7 @@
                     class="input" 
                     minlength="3" 
                     maxlength="15"
-                    onkeyup="checkName();"
+                    onchange="checkName();"
                     required>
                     
 
