changed name of signup process page and started profile creation

--- a/account-create.html
+++ b/account-create.html
@@ -61,7 +61,7 @@
 </head>
 <body>
     <div class="account-wrapper">
-        <form id="signup" action="php-processes/signup" method="post">
+        <form id="signup" action="php-processes/create-account" method="post">
             <div class="input-warpper">
                 <label for="username" id="usernameLabel">Username:</label>
                 <input type="text" 
