--- a/profile-create.html
+++ b/profile-create.html
@@ -18,7 +18,7 @@
     <div class="content-wrapper">
         <div class="profile-wrapper">
             <h1>Create Your Profile</h1>
-            <form action="" id="profileCreation" method="post">
+            <form action="php-processes/create-profile" id="profileCreation" method="post">
                 <div class="input-wrapper">
                     <label for="bio">Bio: Tell everyone a little about yourself</label>
                     <textarea name="bio" id="bio" minlength="1" maxlength="300" placeholder="Max Length: 300 characters"></textarea>
