created choose pfp system

--- a/choose-pfp.html
+++ b/choose-pfp.html
@@ -27,7 +27,7 @@
             <div class="badge-rows-pfp" id="row3" style="justify-content: center;">
             </div>
             <div>
-                <form action="" method="post">
+                <form action="php-processes/choose-pfp" method="post">
                     <div class="hidden-form">
                         <input type="text" name="choose-pfp" id="choose-pfp">
                     </div>
