added required to all inputs that would break the system if they were entered blank or added if conditions to only run sql if all needed inputs have posted if required can't be applied

--- a/forgot-password.html
+++ b/forgot-password.html
@@ -22,7 +22,7 @@
             <form id="reset-password" method="post" action="php-processes/send-password-reset">
                 <div class="forget-container">
                     <label for="email">Email:</label>
-                    <input class="reset-input" type="email" name="email" id="forget-email" require>
+                    <input class="reset-input" type="email" name="email" id="forget-email" required>
                 </div>
                 <div class="forget-button-wrapper">
                     <button type="submit" id="submit-btn" class="submit-btn">Send</button>
